@@ -1,17 +1,14 @@
-FROM openjdk:8-jre-alpine
+# 使用官方的 OpenJDK 17 作为基础镜像
+FROM openjdk:17-jdk-alpine
 
-RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
-RUN echo 'Asia/Shanghai' >/etc/timezone
-
-ENV JAVA_OPTS ''
-
+# 设置工作目录
 WORKDIR /app
-ADD target/demo-0.0.1-SNAPSHOT.jar .
 
+# 复制当前目录下的所有文件到工作目录中
+COPY . .
 
-ENTRYPOINT ["sh", "-c", "set -e && java -XX:+PrintFlagsFinal \
-                                           -XX:+HeapDumpOnOutOfMemoryError \
-                                           -XX:HeapDumpPath=/heapdump/heapdump.hprof \
-                                           -XX:+UnlockExperimentalVMOptions \
-                                           -XX:+UseCGroupMemoryLimitForHeap \
-                                           "]
+# 如果你有特定的环境变量，可以在这里设置
+# ENV MY_ENV_VAR=value
+
+# 运行应用程序的命令
+CMD ["java", "-jar", "app.jar"]
